v1.1.0/modules/schema/pages/class/PowerTransformerEnd.adoc
= `PowerTransformerEnd`
:toclevels: 4


+++A PowerTransformerEnd is associated with each Terminal of a PowerTransformer.
The impedance values r, r0, x, and x0 of a PowerTransformerEnd represents a star equivalent as follows.
1) for a two Terminal PowerTransformer the high voltage (TransformerEnd.endNumber=1) PowerTransformerEnd has non zero values on r, r0, x, and x0 while the low voltage (TransformerEnd.endNumber=2) PowerTransformerEnd has zero values for r, r0, x, and x0.  Parameters are always provided, even if the PowerTransformerEnds have the same rated voltage.  In this case, the parameters are provided at the PowerTransformerEnd which has TransformerEnd.endNumber equal to 1.
2) for a three Terminal PowerTransformer the three PowerTransformerEnds represent a star equivalent with each leg in the star represented by r, r0, x, and x0 values.
3) For a three Terminal transformer each PowerTransformerEnd shall have g, g0, b and b0 values corresponding to the no load losses distributed on the three PowerTransformerEnds. The total no load loss shunt impedances may also be placed at one of the PowerTransformerEnds, preferably the end numbered 1, having the shunt values on end 1.  This is the preferred way.
4) for a PowerTransformer with more than three Terminals the PowerTransformerEnd impedance values cannot be used. Instead use the TransformerMeshImpedance or split the transformer into multiple PowerTransformers.
Each PowerTransformerEnd must be contained by a PowerTransformer. Because a PowerTransformerEnd (or any other object) can not be contained by more than one parent, a PowerTransformerEnd can not have an association to an EquipmentContainer (Substation, VoltageLevel, etc).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PowerTransformerEnd`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/TransformerEnd.adoc[`TransformerEnd`]
*** *`PowerTransformerEnd`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<PowerTransformer,`PowerTransformer`>>
//| [[slots_table.PowerTransformer]]<<PowerTransformer,`PowerTransformer`>>
| 0..1 +
xref::class/PowerTransformer.adoc[`PowerTransformer`]
| +++The power transformer of this power transformer end.+++
| _n/a_

| <<b,`b`>>
//| [[slots_table.b]]<<b,`b`>>
| 0..1 +
xref::class/Susceptance.adoc[`Susceptance`]
| +++Magnetizing branch susceptance (B mag).  The value can be positive or negative.+++
| _n/a_

| <<b0,`b0`>>
//| [[slots_table.b0]]<<b0,`b0`>>
| 0..1 +
xref::class/Susceptance.adoc[`Susceptance`]
| +++Zero sequence magnetizing branch susceptance.+++
| _n/a_

| <<connectionKind,`connectionKind`>>
//| [[slots_table.connectionKind]]<<connectionKind,`connectionKind`>>
| 0..1 +
xref::enumeration/WindingConnection.adoc[`WindingConnection`]
| +++Kind of connection.+++
| _n/a_

| <<g,`g`>>
//| [[slots_table.g]]<<g,`g`>>
| 0..1 +
xref::class/Conductance.adoc[`Conductance`]
| +++Magnetizing branch conductance.+++
| _n/a_

| <<g0,`g0`>>
//| [[slots_table.g0]]<<g0,`g0`>>
| 0..1 +
xref::class/Conductance.adoc[`Conductance`]
| +++Zero sequence magnetizing branch conductance (star-model).+++
| _n/a_

| <<phaseAngleClock,`phaseAngleClock`>>
//| [[slots_table.phaseAngleClock]]<<phaseAngleClock,`phaseAngleClock`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Terminal voltage phase angle displacement where 360 degrees are represented with clock hours. The valid values are 0 to 11....+++
| _n/a_

| <<r,`r`>>
//| [[slots_table.r]]<<r,`r`>>
| 0..1 +
xref::class/Resistance.adoc[`Resistance`]
| +++Resistance (star-model) of the transformer end.
The attribute shall be equal to or greater than zero for non-equivalent...+++
| _n/a_

| <<r0,`r0`>>
//| [[slots_table.r0]]<<r0,`r0`>>
| 0..1 +
xref::class/Resistance.adoc[`Resistance`]
| +++Zero sequence series resistance (star-model) of the transformer end.+++
| _n/a_

| <<ratedS,`ratedS`>>
//| [[slots_table.ratedS]]<<ratedS,`ratedS`>>
| 0..1 +
xref::class/ApparentPower.adoc[`ApparentPower`]
| +++Normal apparent power rating.
The attribute shall be a positive value. For a two-winding transformer the values for the...+++
| _n/a_

| <<ratedU,`ratedU`>>
//| [[slots_table.ratedU]]<<ratedU,`ratedU`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++Rated voltage: phase-phase for three-phase windings, and either phase-phase or phase-neutral for single-phase windings.
A...+++
| _n/a_

| <<x,`x`>>
//| [[slots_table.x]]<<x,`x`>>
| 0..1 +
xref::class/Reactance.adoc[`Reactance`]
| +++Positive sequence series reactance (star-model) of the transformer end.+++
| _n/a_

| <<x0,`x0`>>
//| [[slots_table.x0]]<<x0,`x0`>>
| 0..1 +
xref::class/Reactance.adoc[`Reactance`]
| +++Zero sequence series reactance of the transformer end.+++
| _n/a_

| <<BaseVoltage,`BaseVoltage`>>
//| [[slots_table.BaseVoltage]]<<BaseVoltage,`BaseVoltage`>>
| 0..1 +
xref::class/BaseVoltage.adoc[`BaseVoltage`]
| +++Base voltage of the transformer end.  This is essential for PU calculation.+++
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| <<CoreAdmittance,`CoreAdmittance`>>
//| [[slots_table.CoreAdmittance]]<<CoreAdmittance,`CoreAdmittance`>>
| 0..1 +
xref::class/TransformerCoreAdmittance.adoc[`TransformerCoreAdmittance`]
| +++Core admittance of this transformer end, representing magnetising current and core losses. The full values of the...+++
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| <<FromMeshImpedance,`FromMeshImpedance`>>
//| [[slots_table.FromMeshImpedance]]<<FromMeshImpedance,`FromMeshImpedance`>>
| 0..* +
xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]
| +++All mesh impedances between this 'to' and other 'from' transformer ends.+++
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| <<FromWindingInsulations,`FromWindingInsulations`>>
//| [[slots_table.FromWindingInsulations]]<<FromWindingInsulations,`FromWindingInsulations`>>
| 0..* +
xref::class/WindingInsulation.adoc[`WindingInsulation`]
| _n/a_
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| <<PhaseTapChanger,`PhaseTapChanger`>>
//| [[slots_table.PhaseTapChanger]]<<PhaseTapChanger,`PhaseTapChanger`>>
| 0..1 +
xref::class/PhaseTapChanger.adoc[`PhaseTapChanger`]
| +++Phase tap changer associated with this transformer end.+++
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| <<RatioTapChanger,`RatioTapChanger`>>
//| [[slots_table.RatioTapChanger]]<<RatioTapChanger,`RatioTapChanger`>>
| 0..1 +
xref::class/RatioTapChanger.adoc[`RatioTapChanger`]
| +++Ratio tap changer associated with this transformer end.+++
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| <<StarImpedance,`StarImpedance`>>
//| [[slots_table.StarImpedance]]<<StarImpedance,`StarImpedance`>>
| 0..1 +
xref::class/TransformerStarImpedance.adoc[`TransformerStarImpedance`]
| +++(accurate for 2- or 3-winding transformers only) Pi-model impedances of this transformer end. By convention, for a two...+++
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| <<Terminal,`Terminal`>>
//| [[slots_table.Terminal]]<<Terminal,`Terminal`>>
| 0..1 +
xref::class/Terminal.adoc[`Terminal`]
| +++Terminal of the power transformer to which this transformer end belongs.+++
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| <<ToMeshImpedance,`ToMeshImpedance`>>
//| [[slots_table.ToMeshImpedance]]<<ToMeshImpedance,`ToMeshImpedance`>>
| 0..* +
xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]
| +++All mesh impedances between this 'from' and other 'to' transformer ends.+++
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| <<ToWindingInsulations,`ToWindingInsulations`>>
//| [[slots_table.ToWindingInsulations]]<<ToWindingInsulations,`ToWindingInsulations`>>
| 0..* +
xref::class/WindingInsulation.adoc[`WindingInsulation`]
| _n/a_
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| <<bmagSat,`bmagSat`>>
//| [[slots_table.bmagSat]]<<bmagSat,`bmagSat`>>
| 0..1 +
xref::class/PerCent.adoc[`PerCent`]
| +++Core shunt magnetizing susceptance in the saturation region.+++
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| <<endNumber,`endNumber`>>
//| [[slots_table.endNumber]]<<endNumber,`endNumber`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Number for this transformer end, corresponding to the end's order in the power transformer vector group or phase angle clock...+++
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| <<grounded,`grounded`>>
//| [[slots_table.grounded]]<<grounded,`grounded`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++(for Yn and Zn connections) True if the neutral is solidly grounded.+++
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| <<magBaseU,`magBaseU`>>
//| [[slots_table.magBaseU]]<<magBaseU,`magBaseU`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++The reference voltage at which the magnetizing saturation measurements were made.+++
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| <<magSatFlux,`magSatFlux`>>
//| [[slots_table.magSatFlux]]<<magSatFlux,`magSatFlux`>>
| 0..1 +
xref::class/PerCent.adoc[`PerCent`]
| +++Core magnetizing saturation curve knee flux level.+++
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| <<rground,`rground`>>
//| [[slots_table.rground]]<<rground,`rground`>>
| 0..1 +
xref::class/Resistance.adoc[`Resistance`]
| +++(for Yn and Zn connections) Resistance part of neutral impedance where 'grounded' is true.+++
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| <<xground,`xground`>>
//| [[slots_table.xground]]<<xground,`xground`>>
| 0..1 +
xref::class/Reactance.adoc[`Reactance`]
| +++(for Yn and Zn connections) Reactive part of neutral impedance where 'grounded' is true.+++
| xref::class/TransformerEnd.adoc[`TransformerEnd`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#b]
=== `b`
+++Magnetizing branch susceptance (B mag).  The value can be positive or negative.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerTransformerEnd.b`
| Cardinality
| 0..1
| Type
| xref::class/Susceptance.adoc[`Susceptance`]


|===

////
[.text-left]
--
<<slots_table.b,&#10548;>>
--
////


//[discrete]
[#b0]
=== `b0`
+++Zero sequence magnetizing branch susceptance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerTransformerEnd.b0`
| Cardinality
| 0..1
| Type
| xref::class/Susceptance.adoc[`Susceptance`]


|===

////
[.text-left]
--
<<slots_table.b0,&#10548;>>
--
////


//[discrete]
[#BaseVoltage]
=== `BaseVoltage`
+++Base voltage of the transformer end.  This is essential for PU calculation.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.BaseVoltage`
| Cardinality
| 0..1
| Type
| xref::class/BaseVoltage.adoc[`BaseVoltage`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.BaseVoltage,&#10548;>>
--
////


//[discrete]
[#bmagSat]
=== `bmagSat`
+++Core shunt magnetizing susceptance in the saturation region.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.bmagSat`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.bmagSat,&#10548;>>
--
////


//[discrete]
[#connectionKind]
=== `connectionKind`
+++Kind of connection.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerTransformerEnd.connectionKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/WindingConnection.adoc[`WindingConnection`]


|===

////
[.text-left]
--
<<slots_table.connectionKind,&#10548;>>
--
////


//[discrete]
[#CoreAdmittance]
=== `CoreAdmittance`
+++Core admittance of this transformer end, representing magnetising current and core losses. The full values of the transformer should be supplied for one transformer end only.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.CoreAdmittance`
| Cardinality
| 0..1
| Type
| xref::class/TransformerCoreAdmittance.adoc[`TransformerCoreAdmittance`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.CoreAdmittance,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#endNumber]
=== `endNumber`
+++Number for this transformer end, corresponding to the end's order in the power transformer vector group or phase angle clock number.  Highest voltage winding should be 1.  Each end within a power transformer should have a unique subsequent end number.   Note the transformer end number need not match the terminal sequence number.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.endNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.endNumber,&#10548;>>
--
////


//[discrete]
[#FromMeshImpedance]
=== `FromMeshImpedance`
+++All mesh impedances between this 'to' and other 'from' transformer ends.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.FromMeshImpedance`
| Cardinality
| 0..*
| Type
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.FromMeshImpedance,&#10548;>>
--
////


//[discrete]
[#FromWindingInsulations]
=== `FromWindingInsulations`



[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.FromWindingInsulations`
| Cardinality
| 0..*
| Type
| xref::class/WindingInsulation.adoc[`WindingInsulation`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.FromWindingInsulations,&#10548;>>
--
////


//[discrete]
[#g]
=== `g`
+++Magnetizing branch conductance.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerTransformerEnd.g`
| Cardinality
| 0..1
| Type
| xref::class/Conductance.adoc[`Conductance`]


|===

////
[.text-left]
--
<<slots_table.g,&#10548;>>
--
////


//[discrete]
[#g0]
=== `g0`
+++Zero sequence magnetizing branch conductance (star-model).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerTransformerEnd.g0`
| Cardinality
| 0..1
| Type
| xref::class/Conductance.adoc[`Conductance`]


|===

////
[.text-left]
--
<<slots_table.g0,&#10548;>>
--
////


//[discrete]
[#grounded]
=== `grounded`
+++(for Yn and Zn connections) True if the neutral is solidly grounded.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.grounded`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.grounded,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#magBaseU]
=== `magBaseU`
+++The reference voltage at which the magnetizing saturation measurements were made.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.magBaseU`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.magBaseU,&#10548;>>
--
////


//[discrete]
[#magSatFlux]
=== `magSatFlux`
+++Core magnetizing saturation curve knee flux level.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.magSatFlux`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.magSatFlux,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#phaseAngleClock]
=== `phaseAngleClock`
+++Terminal voltage phase angle displacement where 360 degrees are represented with clock hours. The valid values are 0 to 11. For example, for the secondary side end of a transformer with vector group code of 'Dyn11', specify the connection kind as wye with neutral and specify the phase angle of the clock as 11.  The clock value of the transformer end number specified as 1, is assumed to be zero.  Note the transformer end number is not assumed to be the same as the terminal sequence number.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerTransformerEnd.phaseAngleClock`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.phaseAngleClock,&#10548;>>
--
////


//[discrete]
[#PhaseTapChanger]
=== `PhaseTapChanger`
+++Phase tap changer associated with this transformer end.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.PhaseTapChanger`
| Cardinality
| 0..1
| Type
| xref::class/PhaseTapChanger.adoc[`PhaseTapChanger`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.PhaseTapChanger,&#10548;>>
--
////


//[discrete]
[#PowerTransformer]
=== `PowerTransformer`
+++The power transformer of this power transformer end.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerTransformerEnd.PowerTransformer`
| Cardinality
| 0..1
| Type
| xref::class/PowerTransformer.adoc[`PowerTransformer`]


|===

////
[.text-left]
--
<<slots_table.PowerTransformer,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#r]
=== `r`
+++Resistance (star-model) of the transformer end.
The attribute shall be equal to or greater than zero for non-equivalent transformers.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerTransformerEnd.r`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]


|===

////
[.text-left]
--
<<slots_table.r,&#10548;>>
--
////


//[discrete]
[#r0]
=== `r0`
+++Zero sequence series resistance (star-model) of the transformer end.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerTransformerEnd.r0`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]


|===

////
[.text-left]
--
<<slots_table.r0,&#10548;>>
--
////


//[discrete]
[#ratedS]
=== `ratedS`
+++Normal apparent power rating.
The attribute shall be a positive value. For a two-winding transformer the values for the high and low voltage sides shall be identical.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerTransformerEnd.ratedS`
| Cardinality
| 0..1
| Type
| xref::class/ApparentPower.adoc[`ApparentPower`]


|===

////
[.text-left]
--
<<slots_table.ratedS,&#10548;>>
--
////


//[discrete]
[#ratedU]
=== `ratedU`
+++Rated voltage: phase-phase for three-phase windings, and either phase-phase or phase-neutral for single-phase windings.
A high voltage side, as given by TransformerEnd.endNumber, shall have a ratedU that is greater than or equal to ratedU for the lower voltage sides.
The attribute shall be a positive value.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerTransformerEnd.ratedU`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]


|===

////
[.text-left]
--
<<slots_table.ratedU,&#10548;>>
--
////


//[discrete]
[#RatioTapChanger]
=== `RatioTapChanger`
+++Ratio tap changer associated with this transformer end.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.RatioTapChanger`
| Cardinality
| 0..1
| Type
| xref::class/RatioTapChanger.adoc[`RatioTapChanger`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.RatioTapChanger,&#10548;>>
--
////


//[discrete]
[#rground]
=== `rground`
+++(for Yn and Zn connections) Resistance part of neutral impedance where 'grounded' is true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.rground`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.rground,&#10548;>>
--
////


//[discrete]
[#StarImpedance]
=== `StarImpedance`
+++(accurate for 2- or 3-winding transformers only) Pi-model impedances of this transformer end. By convention, for a two winding transformer, the full values of the transformer should be entered on the high voltage end (endNumber=1).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.StarImpedance`
| Cardinality
| 0..1
| Type
| xref::class/TransformerStarImpedance.adoc[`TransformerStarImpedance`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.StarImpedance,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#Terminal]
=== `Terminal`
+++Terminal of the power transformer to which this transformer end belongs.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.Terminal`
| Cardinality
| 0..1
| Type
| xref::class/Terminal.adoc[`Terminal`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.Terminal,&#10548;>>
--
////


//[discrete]
[#ToMeshImpedance]
=== `ToMeshImpedance`
+++All mesh impedances between this 'from' and other 'to' transformer ends.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.ToMeshImpedance`
| Cardinality
| 0..*
| Type
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.ToMeshImpedance,&#10548;>>
--
////


//[discrete]
[#ToWindingInsulations]
=== `ToWindingInsulations`



[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.ToWindingInsulations`
| Cardinality
| 0..*
| Type
| xref::class/WindingInsulation.adoc[`WindingInsulation`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.ToWindingInsulations,&#10548;>>
--
////


//[discrete]
[#x]
=== `x`
+++Positive sequence series reactance (star-model) of the transformer end.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerTransformerEnd.x`
| Cardinality
| 0..1
| Type
| xref::class/Reactance.adoc[`Reactance`]


|===

////
[.text-left]
--
<<slots_table.x,&#10548;>>
--
////


//[discrete]
[#x0]
=== `x0`
+++Zero sequence series reactance of the transformer end.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PowerTransformerEnd.x0`
| Cardinality
| 0..1
| Type
| xref::class/Reactance.adoc[`Reactance`]


|===

////
[.text-left]
--
<<slots_table.x0,&#10548;>>
--
////


//[discrete]
[#xground]
=== `xground`
+++(for Yn and Zn connections) Reactive part of neutral impedance where 'grounded' is true.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEnd.xground`
| Cardinality
| 0..1
| Type
| xref::class/Reactance.adoc[`Reactance`]

| Inherited from
| xref::class/TransformerEnd.adoc[`TransformerEnd`]


|===

////
[.text-left]
--
<<slots_table.xground,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/PowerTransformer.adoc[`PowerTransformer`] | xref::class/PowerTransformer.adoc#PowerTransformerEnd[`PowerTransformerEnd`]


|===

